[package]
name = "scramble"
version = "0.1.0"
authors = ["outfrost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
hyper = { version = "0.14.12", features = ["http1", "server", "tcp"] }
nanorand = "0.6.1"
ncurses = "5.101.0"
tokio = { version = "1.13.1", features = ["rt", "rt-multi-thread"] }
webster = "0.3.0"
